Add lead to show on UI

--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -377,7 +377,7 @@
                </div>
                     <div class="modal-footer">
                      <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                      <button  type="submit" class="btn blue addContactNow">{{_("Add Opportunity")}}</button>
+                      <button  type="submit" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
                      </div>
                    </form>
             </div>
@@ -490,7 +490,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Add Case")}}</button>
+                <button  type="submit" class="btn green addContactNow">{{_("Add Case")}}</button>
               </div>
                </form>
           </div>
