--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -107,7 +107,7 @@
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Accounts")}} > <%= account.name %> </h2>
             
 
-           <span ng-show="account.account_type">{{_("Type")}}: <a class="tag" href="/#/search/type:Account <%=account.account_type%>">#<%=account.account_type%></a></span>
+           <span ng-show="account.account_type">{{_("Type")}}: <a class="tag" href="/#/search/type:Account <%=account.account_type%>">#<%=account.account_type%></a></span><br>
           <span ng-show="account.industry">{{_("Industry")}}: <a class="tag" href="/#/search/type:Account <%=account.industry%>">#<%=account.industry%></a></span> 
              </br>
              <span class="page-meta"><i class="icon-pencil"><a ng-click="editaccount()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i> |  <i class="icon-trash"><a ng-click="delete(account)" class="btn-link addAnotherPhone">  {{_("Delete")}}</a></i></span>
@@ -222,7 +222,7 @@
                                   <ul class="unstyled contact-infos">
                                     <li ng-repeat="email in account.emails"> <%=email.email %>   </li>
                                     
-                                    <li><a href="#emailmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new email address ') }}</a></li>
+                                    <li><a href="#emailmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new email address </a></li>
 
                                   </ul>
                                 <div class="news-block-tags">
@@ -375,7 +375,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Add Contact")}}</button>
+                <button  type="submit" class="btn green addContactNow">{{_("Add Contact")}}</button>
               </div>
                </form>
        </div>
@@ -474,7 +474,7 @@
               </div>
                     <div class="modal-footer">
                      <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                      <button  type="submit" class="btn blue addContactNow">{{_("Add Opportunity")}}</button>
+                      <button  type="submit" class="btn green addContactNow">{{_("Add Opportunity")}}</button>
                      </div>
                    </form>
           </div>
@@ -585,7 +585,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn blue addContactNow">{{_("Add Case")}}</button>
+                <button  type="submit" class="btn green addContactNow">{{_("Add Case")}}</button>
               </div>
                </form>
        </div>
@@ -648,7 +648,7 @@
               <!-- BEGIN PORTLET-->
               <div class="portlet">
                 <div class="portlet-title line">
-                  <div class="caption"><i class="icon-tasks"></i>Loading...Tasks & Events</div>
+                  <div class="caption"><i class="icon-tasks"></i>Tasks & Events</div>
                   
                 </div>
                 <div class="portlet-body" id="chats">
