--- a/templates/live/product_videos/product_videos_list.html
+++ b/templates/live/product_videos/product_videos_list.html
@@ -117,6 +117,19 @@
                                   
                 </div>
               </div>
+              <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/accounts_blank.png">
+                      <p class="lead">{{ _('Shows pages  let you schedule your hangouts (classes), share your knowledge and be usefull.') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
               </div>
             </div>
           <div class="row-fluid">
