Feedback Model, Apis, Controllers and Services

--- a/templates/base.html
+++ b/templates/base.html
@@ -317,6 +317,7 @@
   <script src="static/app/scripts/services/userservices.js"></script>
   <script src="static/app/scripts/services/groupservices.js"></script>
   <script src="static/app/scripts/services/liveservices/showservices.js" ></script>
+  <script src="static/app/scripts/services/liveservices/feedbackservices.js" ></script>
   <script src="static/app/scripts/services/noteservices.js" ></script>
   <script src="static/app/scripts/services/commentservices.js" ></script>
    <script src="static/app/scripts/services/settingservices.js" ></script>
