--- a/templates/live/feedbacks/feedbacks_list.html
+++ b/templates/live/feedbacks/feedbacks_list.html
@@ -36,47 +36,7 @@
               </span>
         </div>
       </div>
-      <div id="newShowModal" class="modal  hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h3 id="myModalLabel">Schedule a show</h3>
-            </div>
-            <div class="modal-body">
-                     <div class="controls controls-row">
-                            <form id="addTask" ng-submit="scheduleShow(ioevent)" class="ng-pristine ng-valid">
-                                                  <input class="input-block-level" autofocus type="text" placeholder="Add a new show" id="taskTitle" ng-model="ioevent.name">
-                                                  <p><strong>When?</strong></p>
-                                                <div class="row-fluid">
-                                                  <div class="span6">
-                                                    <p> <strong>Starts</strong>: <%=ioevent.starts_at | date:'MMMM dd, yyyy, HH:mm'%></p>
-                                                        <datetimepicker data-ng-model="ioevent.starts_at"
-                                                    data-datetimepicker-config="{ startView:'day', minView:'minute'}" />
-                                                  </div>
-                                                  <div class="span6">
-                                                  <p><strong>Ends</strong>: <%=ioevent.ends_at | date:'MMMM dd, yyyy, HH:mm'%></p>
-                                                        <datetimepicker data-ng-model="ioevent.ends_at"
-                                                    data-datetimepicker-config="{ startView:'day', minView:'minute' }" />
-                                                  </div>
-                                                </div>
-                                                    <input class="input-block-level" autofocus="" type="text" placeholder="Add #hashtags about this show" id="taskTitle" ng-model="ioevent.tags">
-                                                    
-                                                    
-                                                    
-                                               
-
-                                                  
-                  </div>
-            </div>
-            <div class="modal-footer">
-              <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-              
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Shedule this show">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
-                                        
-            </form>
-            </div>
-          </div>
-      
+         
       <div class="container-fluid" ng-show="isSignedIn">
         
         <!-- END PAGE HEADER-->
@@ -84,12 +44,12 @@
         <div class="row-fluid">
           
           <div class="span12">
-            <h2>{{ _("Shows") }} </h2>
+            <h2>{{ _("Feedbacks") }} </h2>
             
             <div class="btn-group">
             
                     <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
-                    {{ _("Schedule a show") }} <i class="icon-plus"></i>
+                    {{ _("Add new Feedback") }} <i class="icon-plus"></i>
                     </button>
             </div>
                
@@ -102,16 +62,16 @@
             <div class="row-fluid cards-container">
             <div class="inner-cards-container">
             
-              <div ng-repeat="show in shows" class="span3 responsive" data-tablet="span6" data-desktop="span3">
+              <div ng-repeat="feedback in feedbacks" class="span3 responsive" data-tablet="span6" data-desktop="span3">
                 <div class="dashboard-stat cards cards-show">
                   
                   <div class="details">
-                    <a href="/#/shows/show/<%= show.id %>"><h3 class="relatedcardOppTitle">
-                                    <%= show.name%>
+                    <a href="/#/feedbacks/feedback/<%= feedback.id %>"><h3 class="relatedcardOppTitle">
+                                    <%= feedback.name%>
                                     </h3></a>
                     <div class="desc">                           
                       
-                    <a ng-repeat="tag in show.tags" class="desc" href="/#/accounts/industry/<%=account.industry%>"> <%=tag%> </a> 
+                    <a  class="desc" href="/#/accounts/industry/<%=account.industry%>"> </a> 
                     </div>
                   </div>
                                   
@@ -124,7 +84,7 @@
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
                       <img src="/static/img/accounts_blank.png">
-                      <p class="lead">{{ _('Shows pages  let you schedule your hangouts (classes), share your knowledge and be usefull.') }}</p>
+                      <p class="lead">{{ _('Feedbacks pages  let you receive a feedback from leads or customers ') }}</p>
                   </div>
                
                                   
@@ -139,7 +99,7 @@
                     <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
                     {{_("Prev")}} 
                     </button></li>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/p/<%= page.id %>"><%= page.id %></a></li>
+                    
                     <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
                     {{_("Next")}} 
                     </button></li>
