--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -444,6 +444,19 @@
                                                   
                                 </div>
                               </div>
+                            <div ng-show="blankState" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                               <div class="dashboard-stat cards">
+                  
+                  
+                              <div class="blank_slate_arrow"></div>
+                             <div class="blank_slate_body">
+                                   <img src="/static/img/leads_blank.png">
+                                   <p class="lead">You have leads coming in from a wide variety of sources related to this show.i/oGrow help you organize informations about leads so they can be followed up on and qualified quickly.</p>
+                              </div>
+               
+                                  
+                              </div>
+                              </div>
                               </div>
                             </div>
           <div id="addLeadShow" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
